# takopi-slack-plugin

./: .gitignore  CONTINUITY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
docs/: AGENTS.example.md  ALERT_ROUTING_SPEC.md  GATING_README.md  SLACK_DIRECT_TRIGGER_SPEC.md  takopi-webhooks-plugin-spec.md
src/takopi_slack_plugin/: backend.py  bridge.py  client.py  config.py  engine.py  file_transfer.py  onboarding.py  outbox.py  thread_sessions.py  voice.py
src/takopi_slack_plugin/commands/: dispatch.py  executor.py  file_transfer.py  reply.py
src/takopi_transport_slack/: __init__.py  backend.py  bridge.py  client.py  config.py  onboarding.py
tests/: test_slack_approval_flow.py  test_slack_client.py  test_slack_config.py  test_slack_engine_precedence.py  test_slack_file_transfer.py  test_slack_helpers.py  test_slack_hot_reload.py  test_slack_outbox.py  test_slack_rendering.py  test_slack_thread_sessions.py  test_slack_transport.py  test_slack_voice.py  test_unittest_runner.py
